--- a/main.css
+++ b/main.css
@@ -1,58 +1,60 @@
-/* .mountainRoad li {
-    list-style: none;
-    margin: 0 5px;
-}
-
-.mountainRoad li a {
-    text-decoration: none;
-    color: black;
-}
-
-.mountainRoad {
-    display: flex;
-    margin: 0;
-    padding: 0;
-} */
-
 .navbar {
-    background-color: #F18A9B;
+    background-color: #79AC78;
+}
+
+.section-title {
+    font-family: 'Carattere', cursive;
+    font-weight: bold;
 }
 
 .navbar-toggler,
-.nav-pills .nav-link.active {
+.nav-pills .nav-link.active{
     background-color: #fff;
-    color: #F18A9B;
+    color: #618264;
 }
 
-.road {
-    background-color: #89CFF3;
-}
-
-.road:hover {
-    background-color: #4180a0;
-}
-
-.mountain {
-    background-color: #31304D;
-}
-
-.mountain:hover {
-    background-color: #242342;
+.nav-pills .nav-link,
+#cabecalho {
+    color: #fff;
 }
 
 #sobre,
-#rotas {
-    background-color: #e48b9a93;
+#equipamentos {
+    background-color: #D0E7D2;
 }
 
-.tab-content img {
-    border-radius: 50%;
+section img {
+    margin-bottom: 20px;
+    display: block;
+    width: 100%;
 }
 
-.gray-scale {
-    filter: grayscale(1);
+
+section h2,
+section h3,
+section h4,
+section h5 {    
+    color: #618264;
 }
 
+#equipamentos .nav-link {
+    color: #000;
+    font-weight: bold;
+}
 
+#equipamentos .nav-link.active,
+#contato button {
+    background-color: #618264;
+    color: #fff;
+    font-weight: bold;
+}
 
+.social-links li {
+    list-style: none;
+    display: inline;
+}
 
+.social-links a {
+    text-decoration: none;
+    color: #618264;
+}
